--- a/Starter_Code/data/merger.ipynb
+++ b/Starter_Code/data/merger.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "2f495e22-6438-4fcc-8c2c-58d1169ad20a",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "3f495eb5-dd6e-4dd3-b4bc-5c8a650e725f",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "63c7e25b-d08f-4bb1-a942-b40dcfbdce43",
    "metadata": {},
    "outputs": [
@@ -184,7 +184,7 @@
        "4  Speed Skating Women's 500 metres   NaN  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "42e03d93-4e8f-47ec-8519-d4907c1e485f",
    "metadata": {},
    "outputs": [
@@ -207,7 +207,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "cedc6f07-b1d8-498e-b3de-85572db1d206",
    "metadata": {},
    "outputs": [
@@ -378,7 +378,7 @@
        "4  Speed Skating Women's 500 metres   NaN  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "dbf162d8-1f97-48ed-ba62-29ccfd700f0f",
    "metadata": {},
    "outputs": [
@@ -415,7 +415,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "2f5f3f67-931d-4781-8100-8dce57cc3b2f",
    "metadata": {},
    "outputs": [],
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "715b40ae-08e0-445e-83a3-17f960d304cf",
    "metadata": {},
    "outputs": [
@@ -461,7 +461,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "fd82a755-0699-4c04-a2fc-f7d15902bbb4",
    "metadata": {},
    "outputs": [
@@ -632,7 +632,7 @@
        "48        Gymnastics Men's Pommelled Horse    Gold  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "b3e55004-8e9a-43ea-8bf5-7a78fe056e32",
    "metadata": {},
    "outputs": [
@@ -944,7 +944,7 @@
        "[30181 rows x 16 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "3667495f-7948-473d-b0c8-defb951c58a4",
    "metadata": {},
    "outputs": [
@@ -1115,7 +1115,7 @@
        "214351  Wrestling Men's Unlimited Class, Greco-Roman    Gold  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "c8e92517-2dc8-4af6-94a3-fce3687e04bc",
    "metadata": {},
    "outputs": [
@@ -1256,7 +1256,7 @@
        "4    admin  24973000.0  1356226629  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1267,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "a3dc7c3e-3f06-4495-aa2e-f97e376da79f",
    "metadata": {},
    "outputs": [],
@@ -1277,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "c6430de3-f577-41b2-b04a-7f1803ac7010",
    "metadata": {},
    "outputs": [
@@ -1357,7 +1357,7 @@
        "4     Mumbai  19.0761   72.8775      India"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1369,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "2ecf646a-f70a-4276-95d3-b49eb76dc211",
    "metadata": {},
    "outputs": [
@@ -1541,7 +1541,7 @@
        "4                Athletics Men's Triple Jump  Silver  36.2933 -88.3065  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1553,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "42808004-f1bd-409c-8f59-0ab988f871fa",
    "metadata": {},
    "outputs": [
@@ -1725,7 +1725,7 @@
        "1832  Basketball Women's Basketball  Silver -33.8678  151.21  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1737,59 +1737,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "02ac368d-cb25-4cc4-8b13-8a05d84789d2",
+   "execution_count": 26,
+   "id": "49b260e0-879f-4fa8-9205-6bafc67d8ee9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x0000022F3702FD50>\n"
+     ]
+    }
+   ],
    "source": [
-    "merged_df1.to_csv('merged_country_data.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "7a18c352-1cef-42cb-a68c-2fab28663d45",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import geopandas as gpd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "b73053ed-dcba-4048-a1c3-2795609858f4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gdf = gpd.read_file('merged_country_data.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "1c81809f-1a13-4998-8279-a9d01ab29ad9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "geojson = gdf.to_json()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "71296a93-ed89-4912-906d-78eb7db95ab6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('merged_country_data.geojson', 'w') as f:\n",
-    "    f.write(geojson)"
+    "age_groups = merged_df1.groupby(by= \"Age\",sort = True , group_keys=True)\n",
+    "print(age_groups)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49b260e0-879f-4fa8-9205-6bafc67d8ee9",
+   "id": "df0a3754-aaf8-4fa2-92af-1e4e5a8469c0",
    "metadata": {},
    "outputs": [],
    "source": []
